--- a/contact.html
+++ b/contact.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Contactez Architecte PC pour vos questions sur la configuration de PC sur mesure. Email, formulaire de contact et informations disponibles.">
     <title>Contact - Architecte PC</title>
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -16,60 +17,64 @@
 </head>
 <body>
 
+    <!-- Skip link pour navigation clavier -->
+    <a href="#main-content" class="skip-link">Aller au contenu principal</a>
+
     <!-- Header chargé dynamiquement -->
-    <div id="header-placeholder"></div>
+    <div id="header-placeholder" role="banner"></div>
     
     <!-- Modals chargés dynamiquement -->
-    <div id="modal-placeholder"></div>
-    <div id="modal-page-unknown-placeholder"></div>
+    <div id="modal-placeholder" role="dialog" aria-hidden="true"></div>
+    <div id="modal-page-unknown-placeholder" role="dialog" aria-hidden="true"></div>
 
-    <main>
+    <main role="main" id="main-content">
         <!-- Hero Section -->
-        <section class="contact-hero">
+        <section class="contact-hero" aria-labelledby="contact-title">
             <div class="container text-center">
-                <h1 class="contact-title">Contact</h1>
+                <h1 id="contact-title" class="contact-title">Contact</h1>
             </div>
         </section>
 
         <!-- Info Banner FAQ -->
-        <section class="faq-banner">
+        <section class="faq-banner" aria-labelledby="faq-banner-title">
             <div class="container">
                 <div class="faq-card">
-                    <div class="faq-icon">
+                    <div class="faq-icon" aria-hidden="true">
                         <svg width="40" height="40" viewBox="0 0 40 40" fill="none" xmlns="http://www.w3.org/2000/svg">
                             <rect width="40" height="40" rx="8" fill="#4a9eff"/>
                             <path d="M12 20L18 26L28 14" stroke="white" stroke-width="3" stroke-linecap="round" stroke-linejoin="round"/>
                         </svg>
                     </div>
                     <div class="faq-content">
-                        <h3 class="faq-title">Avant de contacter le support, consulte notre F.A.Q</h3>
-                        <p class="faq-subtitle">La réponse que tu attends y est peut-être déjà !</p>
+                        <h2 id="faq-banner-title" class="faq-title">Avant de contacter le support, consultez notre F.A.Q</h2>
+                        <p class="faq-subtitle">La réponse que vous attendez y est peut-être déjà !</p>
                     </div>
                     <div class="faq-action">
-                        <a href="#" class="open-page-unknown-modal">Aller sur la F.A.Q →</a>
+                        <a href="#" class="open-page-unknown-modal" aria-label="Aller à la page des questions fréquentes">Aller sur la F.A.Q →</a>
                     </div>
                 </div>
             </div>
         </section>
 
         <!-- Contact Content -->
-        <section class="contact-section">
+        <section class="contact-section" aria-labelledby="contact-methods-title">
+            <h2 id="contact-methods-title" class="visually-hidden">Méthodes de contact</h2>
             <div class="container">
                 <div class="row g-4">
                     <!-- Left Column - Contact Info -->
                     <div class="col-lg-5">
                         <!-- Suggestions Card -->
-                        <div class="contact-card">
+                        <article class="contact-card">
                             <h3 class="contact-card-title">Suggestions et bogues</h3>
                             <p class="contact-card-text">Si vous avez des suggestions de composants, d'ajouts de fonctionnalités, ou si vous avez trouvé des bogues sur notre site.</p>
                             <div class="contact-email-box">
                                 <p class="contact-label">Contactez-nous par e-mail:</p>
-                                <a href="mailto:contact@architectepc.fr" class="contact-email">contact@architectepc.fr</a>
+                                <a href="mailto:contact@architectepc.fr" class="contact-email" aria-label="Envoyer un email à contact@architectepc.fr">contact@architectepc.fr</a>
                             </div>
-                        </div>
+                        </article>
 
                         <!-- Legal Question Card -->
-                        <div class="contact-card mt-4">
+                        <article class="contact-card mt-4">
                             <h3 class="contact-card-title">Question juridique</h3>
                             <p class="contact-card-text">Vous avez une question d'ordre juridique, et vous souhaitez contacter nos services.</p>
                             <div class="contact-email-box">
