--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Architecte PC - Conception et assemblage de PC sur mesure avec garantie de compatibilité 100%. Configurez votre PC gaming ou professionnel idéal.">
     <title>Architecte PC - L'architecture de la performance</title>
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -16,89 +17,99 @@
 </head>
 <body>
 
+    <!-- Skip link pour navigation clavier -->
+    <a href="#main-content" class="skip-link">Aller au contenu principal</a>
+
     <!-- Header chargé dynamiquement -->
-    <div id="header-placeholder"></div>
+    <div id="header-placeholder" role="banner"></div>
     
     <!-- Modals chargés dynamiquement -->
-    <div id="modal-placeholder"></div>
-    <div id="modal-page-unknown-placeholder"></div>
+    <div id="modal-placeholder" role="dialog" aria-hidden="true"></div>
+    <div id="modal-page-unknown-placeholder" role="dialog" aria-hidden="true"></div>
 
-    <main>
+    <main role="main" id="main-content">
 
-        <section class="hero-section text-center">
+        <section class="hero-section text-center" aria-labelledby="hero-title">
             <div class="container">
-                <p class="eyebrow">Conception de PC sur mesure</p>
-                <h1 class="display-4 fw-bold mb-4">L'architecture de la<br>performance, sur mesure.</h1>
-                <div class="d-flex justify-content-center gap-3 hero-ctas mt-4">
-                    <a class="btn btn-hero-primary btn-lg open-configurator-modal" href="#" id="openConfiguratorModal">Lancer le configurateur</a>
-                    <a class="btn btn-hero-secondary btn-lg open-page-unknown-modal" href="#" role="button">Découvrir nos modèles</a>
+                <p class="eyebrow" aria-label="Catégorie du service">Conception de PC sur mesure</p>
+                <h1 id="hero-title" class="display-4 fw-bold mb-4">L'architecture de la<br>performance, sur mesure.</h1>
+                <div class="d-flex justify-content-center gap-3 hero-ctas mt-4" role="group" aria-label="Actions principales">
+                    <a class="btn btn-hero-primary btn-lg open-configurator-modal" href="#" id="openConfiguratorModal" role="button" aria-label="Ouvrir le configurateur de PC">Lancer le configurateur</a>
+                    <a class="btn btn-hero-secondary btn-lg open-page-unknown-modal" href="#" role="button" aria-label="Découvrir nos modèles de PC pré-configurés">Découvrir nos modèles</a>
                 </div>
             </div>
         </section>
 
-        <section class="features-section">
+        <section class="features-section" aria-labelledby="features-title">
+            <h2 id="features-title" class="visually-hidden">Nos fonctionnalités</h2>
             <div class="container">
                 <div class="row g-4">
                     <div class="col-lg-4 col-md-6">
-                        <div class="feature-card">
+                        <article class="feature-card">
                             <div class="feature-content">
-                                <h5 class="feature-title">Compatibilité 100% Garantie</h5>
+                                <h3 class="feature-title">Compatibilité 100% Garantie</h3>
                                 <p class="feature-text">Notre configurateur intelligent analyse chaque choix en temps réel pour vous assurer qu'il n'y a aucune erreur possible. La performance en tout sérénité.</p>
                             </div>
                             <div class="feature-image">
-                                <img src="assets/img/1.png" alt="Processeur">
+                                <img src="assets/img/1.png" alt="Illustration d'un processeur haute performance">
                             </div>
-                        </div>
+                        </article>
                     </div>
                     <div class="col-lg-4 col-md-6">
-                        <div class="feature-card">
+                        <article class="feature-card">
                             <div class="feature-content">
-                                <h5 class="feature-title">Des Composants Triés sur le Volet</h5>
+                                <h3 class="feature-title">Des Composants Triés sur le Volet</h3>
                                 <p class="feature-text">Nous ne sélectionnons que des composants reconnus pour leur fiabilité et leur performance, pour créer un système équilibré et durable.</p>
                             </div>
                             <div class="feature-image">
-                                <img src="assets/img/2.png" alt="Carte graphique">
+                                <img src="assets/img/2.png" alt="Illustration d'une carte graphique performante">
                             </div>
-                        </div>
+                        </article>
                     </div>
                     <div class="col-lg-4 col-md-12">
-                        <div class="feature-card">
+                        <article class="feature-card">
                             <div class="feature-content">
-                                <h5 class="feature-title">Un Architecte à vos Côtés</h5>
+                                <h3 class="feature-title">Un Architecte à vos Côtés</h3>
                                 <p class="feature-text">Que vous soyez novice ou expert, notre interface vous guide pas à pas avec des conseils clairs pour convenir le PC qui répondra parfaitement à vos besoins.</p>
                             </div>
                             <div class="feature-image">
-                                <img src="assets/img/3.png" alt="Plans">
+                                <img src="assets/img/3.png" alt="Illustration de plans d'architecture de PC">
                             </div>
-                        </div>
+                        </article>
                     </div>
                 </div>
             </div>
         </section>
 
-                <section class="architecture-section">
+                <section class="architecture-section" aria-labelledby="architecture-title">
             <div class="container">
                 <div class="row align-items-start g-5">
                     <div class="col-lg-5">
-                        <h2 class="section-title">Bien plus qu'un assemblage, une architecture.</h2>
+                        <h2 id="architecture-title" class="section-title">Bien plus qu'un assemblage, une architecture.</h2>
                     </div>
                     <div class="col-lg-7">
                         <div class="info-boxes">
-                            <div class="info-box">
-                                <div class="info-icon"><i class="bi bi-square-fill"></i></div>
-                                <h5 class="info-title">Votre Vision, Notre Plan</h5>
-                                <p class="info-text">Tout commence par vos besoins. Que vous soyez gamer, créateur de contenu ou à la recherche du PC familial, nous traduisons vos attentes en un plan de conception clair et optimisé.</p>
-                            </div>
-                            <div class="info-box">
-                                <div class="info-icon"><i class="bi bi-circle-fill"></i></div>
-                                <h5 class="info-title">Une Conception Assistée</h5>
-                                <p class="info-text">Notre configurateur intelligent vous guide à chaque étape. Chaque composant est sélectionné pour sa fiabilité et ses performances, et notre moteur de compatibilité garantit une harmonie parfaite.</p>
-                            </div>
-                            <div class="info-box">
-                                <div class="info-icon"><i class="bi bi-triangle-fill"></i></div>
-                                <h5 class="info-title">Une Architecture Validée</h5>
-                                <p class="info-text">À la fin du processus, vous obtenez pas une simple liste de pièces, mais une architecture complète et équilibrée, accompagnée d'un devis transparent. La performance, sans les mauvaises surprises.</p>
-                            </div>
+                            <article class="info-box">
+                                <div class="info-icon" aria-hidden="true"><i class="bi bi-square-fill"></i></div>
+                                <div>
+                                    <h3 class="info-title">Votre Vision, Notre Plan</h3>
+                                    <p class="info-text">Tout commence par vos besoins. Que vous soyez gamer, créateur de contenu ou à la recherche du PC familial, nous traduisons vos attentes en un plan de conception clair et optimisé.</p>
+                                </div>
+                            </article>
+                            <article class="info-box">
+                                <div class="info-icon" aria-hidden="true"><i class="bi bi-circle-fill"></i></div>
+                                <div>
+                                    <h3 class="info-title">Une Conception Assistée</h3>
+                                    <p class="info-text">Notre configurateur intelligent vous guide à chaque étape. Chaque composant est sélectionné pour sa fiabilité et ses performances, et notre moteur de compatibilité garantit une harmonie parfaite.</p>
+                                </div>
+                            </article>
+                            <article class="info-box">
+                                <div class="info-icon" aria-hidden="true"><i class="bi bi-triangle-fill"></i></div>
+                                <div>
+                                    <h3 class="info-title">Une Architecture Validée</h3>
+                                    <p class="info-text">À la fin du processus, vous obtenez pas une simple liste de pièces, mais une architecture complète et équilibrée, accompagnée d'un devis transparent. La performance, sans les mauvaises surprises.</p>
+                                </div>
+                            </article>
                         </div>
                     </div>
                 </div>
@@ -106,21 +117,21 @@
         </section>
         
         <!-- Marquee / benefits strip (maquette) -->
-                <!-- Marquee / texte défilant -->
-        <section class="marquee-section">
+        <section class="marquee-section" aria-label="Nos engagements">
             <div class="marquee-container">
-                <div class="marquee-content">
+                <div class="marquee-content" aria-live="off">
                     <span>FIABILITÉ GARANTIE ♦ EXPERTISE D'ARCHITECTE ♦ COMPATIBILITÉ TOTALE ♦ PERFORMANCE SUR MESURE ♦</span>
-                    <span>FIABILITÉ GARANTIE ♦ EXPERTISE D'ARCHITECTE ♦ COMPATIBILITÉ TOTALE ♦ PERFORMANCE SUR MESURE ♦</span>
+                    <span aria-hidden="true">FIABILITÉ GARANTIE ♦ EXPERTISE D'ARCHITECTE ♦ COMPATIBILITÉ TOTALE ♦ PERFORMANCE SUR MESURE ♦</span>
                 </div>
             </div>
         </section>
 
         <!-- Testimonial / quote -->
-        <section class="testimonial-section">
+        <section class="testimonial-section" aria-labelledby="testimonial-title">
             <div class="container">
                 <div class="row justify-content-center">
                     <div class="col-lg-10 text-center">
+                        <h2 id="testimonial-title" class="visually-hidden">Témoignage client</h2>
                         <blockquote class="testimonial-quote">
                             <p class="testimonial-text">"J'avais peur de me tromper dans les compatibilités. Le processus m'a guidé de A à Z et le résultat est un PC parfaitement équilibré et ultra performant."</p>
                             <footer class="testimonial-author">— Claire Dupont, Créatrice de contenu</footer>
@@ -132,7 +143,7 @@
     </main>
 
     <!-- Footer chargé dynamiquement -->
-    <div id="footer-placeholder"></div>
+    <div id="footer-placeholder" role="contentinfo"></div>
 
     <!-- Modals chargés dynamiquement -->
     <div id="modal-placeholder"></div>
